Don't try to use schema anymore